--- a/foo/music_notes/templates/music_notes/delete_confirm.html
+++ b/foo/music_notes/templates/music_notes/delete_confirm.html
@@ -5,7 +5,7 @@
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Delete Post</legend>
+            <legend class="border-bottom mb-4">Delete Music Note</legend>
             <h3>Are you sure that you want to delete {{ object.title }}?</h3>
         </fieldset>
         <div class="form-group">
