--- a/foo/music_notes/templates/music_notes/music_notes.html
+++ b/foo/music_notes/templates/music_notes/music_notes.html
@@ -1,16 +1,27 @@
 {% extends 'base.html' %}
 {% block content %}
-<article class="mb-4">
-    <div class="container px-4 px-lg-5">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7">
+<article>
+    <div class="container">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Title</th>
+                    <th scope="col">Duration</th>
+                    <th scope="col">Video</th>
+                </tr>
+            </thead>
+            <tbody>
                 {% for note in music_notes %}
-                    <tr class="{% autoescape off %}{% cycle rowvalue1 rowvalue2 %}{% endautoescape %}">
-                        {{ note.title}}
+                    <tr>
+                        <th scope="row">{{ forloop.counter }}</th>
+                        <th><a href="{% url 'music_note-detail' note.id %}">{{ note.title }}</a></th>
+                        <th>{{ note.duration }}</th>
+                        <th><a href="{{ note.url }}"><i href="{{ note.url }}" class="fa-brands fa-youtube"></i></a></th>
                     </tr>
                 {% endfor %}
-            </div>
-        </div>
+            </tbody>
+        </table>
     </div>
 </article>
 {% endblock %}
