--- a/foo/templates/base.html
+++ b/foo/templates/base.html
@@ -51,13 +51,13 @@
             </div>
         </header>
         <!-- Main Content-->
-        <div class="container px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-10 col-lg-8 col-xl-7">
+{#        <div class="container px-4 px-lg-5">#}
+{#            <div class="row gx-4 gx-lg-5 justify-content-center">#}
+{#                <div class="col-md-10 col-lg-8 col-xl-7">#}
                     {% block content %} {% endblock content %}
-                </div>
-            </div>
-        </div>
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
         <!-- Footer-->
         <footer class="border-top">
             <div class="container px-4 px-lg-5">
