--- a/foo/users/templates/users/profile.html
+++ b/foo/users/templates/users/profile.html
@@ -1,10 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'base.html' %}
+{% load crispy_forms_tags %}
+{% block content %}
+    <div class="content-section">
+    <div class="media">
+        <img src="{{user.profile.image.url}}" alt="" class="rounded-circle account-img">
+        <div class="media-body">
+            <h2 class="account-heading"> {{ user.username }}</h2>
+            <p class="text-secondary">{{ user.email }}</p>
+        </div>
+    </div>
+        {% for friend_request in all_friend_requests %}
+        <h1>{{ friend_request.from_user }}
+        <a href="/accept_friend_request/{{ friend_request.id }}">accept friend request</a>
+        </h1>
+        {% endfor %}
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">Profile info!</legend>
+            {{ user_form|crispy }}
+            {{ profile_form|crispy }}
+        </fieldset>
+        <div class="form-group">
+            <button class="btn btn-outline-info" type="submit">Update</button>
+        </div>
+    </form>
+</div>
+{% endblock %}
