--- a/foo/blog/templates/blog/blog.html
+++ b/foo/blog/templates/blog/blog.html
@@ -6,6 +6,16 @@
 
 {% block title %} Blog {% endblock title %}
 {% block content %}
+    {% for article in articles %}
+        <h2>
+            <a href="{% url 'article-detail' article.id %}" class="article-title"> {{ article.title }}</a>
+        </h2>
+        <p>Tags: {{ article.tags.all|join:", " }}</p>
+        <p>
+            Published {{ article.date_posted }} by {{ article.author }}
+        </p>
+        {{ article.content|truncatewords:50|linebreaks }}
+    {% endfor %}
 {#    <div class="post-preview">#}
 {#        <a href="article.html">#}
 {#            <h2 class="post-title">Man must explore, and this is exploration at its greatest</h2>#}
