--- a/foo/organizations/templates/organizations/organization.html
+++ b/foo/organizations/templates/organizations/organization.html
@@ -4,10 +4,9 @@
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
-                <a class="mr-2" href="#">{{ object.author }}</a>
-                <small class="text-muted">{{ object.date_posted }}</small>
+                <a class="mr-2" href="#">{{ object.owner }}</a>
                 <br>
-                {% if object.author == user %}
+                {% if object.owner == user %}
                     <a href="{% url 'organization-update' object.id %}" class="btn btn-secondary btn-sm mt-1 mb-1">Update</a>
                     <a href="{% url 'organization-delete' object.id %}" class="btn btn-danger btn-sm mt-1 mb-1">Delete</a>
                 {% endif %}
