--- a/foo/music_notes/templates/music_notes/note.html
+++ b/foo/music_notes/templates/music_notes/note.html
@@ -13,9 +13,15 @@
                 {% endif %}
                 <h1>{{ object.title }}</h1>
                 <a class="btn btn-danger btn-sm mt-1 mb-1" href="{{ object.url }}">Check recording</a>
+            {% if object.notes %}
             <div>
                 <embed src="{{ object.notes.url }}" type="application/pdf" height="700px" width="500">
             </div>
+            {% else %}
+                <div>
+                    <p>PDF file doesn't exist</p>
+                </div>
+            {% endif %}
 
             </div>
         </div>
